--- a/myapp/templates/myapp/product_add.html
+++ b/myapp/templates/myapp/product_add.html
@@ -31,7 +31,7 @@
 
         </div>
         <div class="mb-4">
-            <input class="bg-green-500 text-white px-5 py-2" type="submit" name="Add Product" value="Add Product" id="">
+            <input class="bg-green-500 text-white px-5 py-2" type="submit" name="Add Product" value="添加产品" id="">
 
         </div>
     </form>
